# PDUXCodex

./: .env.example  AGENTS.md  README.md  app.py  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml
context/: product.md  research_rules.md
docs/: DECISIONS.md  TASKS.md  release_notes.md  release_workflow.md  ui_pr_checklist.md
prompts/: analysis_prompt.md
sample_data/: README.md  interview_metadata.json
sample_data/mock_uploads/: demo_01_employer_digital_borrower.txt  demo_02_fearful_but_ready.txt  demo_03_no_smartphone.txt  demo_04_no_bank_account.txt  demo_05_self_reliant.txt  demo_06_cyclical_stress.txt  demo_07_whatsapp_but_fearful.txt  demo_08_employer_supported_app_user.txt  demo_09_fully_excluded.txt  demo_10_savings_first.txt
sample_data/structured_outputs/: demo_01_employer_digital_borrower.json  demo_02_fearful_but_ready.json  demo_03_no_smartphone.json  demo_04_no_bank_account.json  demo_05_self_reliant.json  demo_06_cyclical_stress.json  demo_07_whatsapp_but_fearful.json  demo_08_employer_supported_app_user.json  demo_09_fully_excluded.json  demo_10_savings_first.json
skills/: architecture.md  code_quality.md  product_research.md  streamlit_dashboard.md  streamlit_ui_system.md  system_reliability.md  testing.md
sql/: schema.sql
sql/migrations/: 001_initial_schema.sql  (+1 more)
tests/: conftest.py  test_analysis.py  test_api_server.py  test_app.py  test_config.py  test_dashboard_views.py  test_job_queue.py  test_pipeline.py  test_repository_normalization.py  test_repository_smoke.py
(+31 files in other folders)
